Fri Sep 29 01:39:35 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (awk-windows-mac): Copy stock/osconf.h to osconf.h
		in include/krb5, and clean it up when we're done building
		the distribution.

Thu Sep 28 16:00:00 1995  John Rivlin  <jrivlin@fusion.com>

	* Makefile.in: Added mac/gss-sample to tar file.

Wed Sep 27 00:53:08 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Add config/windows.in to the beginning of the
		Makefile.in when we're building the Makefile.

	* Makefile.in: New scheme for building DOS and Macintosh
		distribution files; much more forgiving of random cruft in
		the source tree.

Wed Sep 27 16:00:00 1995  John Rivlin  <jrivlin@fusion.com>

	* Makefile.in: Temporarily move autoconf.h file to include
		directory while creating kerbsrc.mac tar file.

	* Makefile.in: Include telnet-k5-auth directory in download.
		Eliminate telnet directory.

Wed Sep 27 11:47:38 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (install-unix): Changed install to install-unix so
		that the installation directories are created first.

Mon Sep 25 16:32:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 
		(FILES): Added missing backslash at the end of one of the
		lines, missing from the Macintosh integration.

	* aclocal.m4 (MAKE_SUBDIRS, DO_SUBDIRS): MAKE_SUBDIRS now takes
		three arguments; DO_SUBDIRS now generates target rules of
		the form: "foo-unix: <for each subdirectory> make foo".
		All of the macros which generated targets "all",
		"install", "clean", etc. now generate targets "all-unix",
		"install-unix", "clean-unix".  

		This scheme allows us to do multiple-platform builds,
		while preserving ordering constraints that we need in
		order to build library subdirectories correctly.

Sun Sep 24 12:00:00 1995  John Rivlin <jrivlin@fusion.com>

	* Makefile.in: Update CLEANUP list to clean up files created
		in the include directory rather than include/krb5